--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -75,4 +75,16 @@
 
     <!-- Humidity format CHAR LIMIT=25]-->
     <string name="format_humidity">Humedad: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>
+
+    <!-- Notification Format -->
+    <string name="format_notification">
+    Tiempo: <xliff:g id="condition">%1$s</xliff:g> Alta: <xliff:g id="high">%2$s</xliff:g> Baja: <xliff:g id="low">%3$s</xliff:g>
+    </string>
+
+    <string name="pref_enable_notifications_label">Notificaciones de Tiempo</string>
+
+    <string name="pref_enable_notifications_true">Habilitado</string>
+    <string name="pref_enable_notifications_false">No Habilitado</string>
+
 </resources>
+
